syntax = "proto3";

import "google/protobuf/empty.proto";
import "user.proto";
option go_package = "github.com/alfarezyyd/go-takemikazuchi-microservices/common/genproto/job";

message CreateJobRequest {
  optional uint64 AddressId = 1;
  uint64 CategoryId = 2;
  string Title = 3;
  string Description = 4;
  double Latitude = 5;
  double Longitude = 6;
  string AdditionalInformationAddress = 7;
  double Price = 8;
  UserJwtClaim UserJwtClaim = 9;
}

message JobResponse {
  repeated JobModel JobModels = 1;
}

message JobModel {
  uint64 ID = 1;
  string Title = 2;
  string Description = 3;
  uint64 CategoryId = 4;
  double Price = 5;
  string Status = 6;
  optional  string   CreatedAt = 7;
  optional  string UpdatedAt = 8;
}

message UpdateJobRequest {
  optional uint64    AddressId = 1;
  uint64 CategoryId = 2;
  string  JobId = 3;
  string  Title = 4;
  string Description = 5;
  double Latitude = 6;
  double Longitude = 7;
  string AdditionalInformationAddress = 8;
  double Price = 9;
  repeated FileName DeletedFileNames = 10;
  UserJwtClaim UserJwtClaim = 11;
}

message DeleteJobRequest {
  UserJwtClaim UserJwtClaim = 1;
  string JobId = 2;
}

message JobCompleteRequest {
  UserJwtClaim UserJwtClaim = 1;
  string JobId = 2;
}

message FileName {
  string Name = 1;
}


message JobPayload {
  uint64 Id = 1;
  string Title = 2;
  string Description = 3;
  double Price = 4;
  string Status = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
}

message FindByIdRequest {
  string UserEmail = 1;
  uint64 JobId = 2;
}

service JobService {
  rpc FindAll(google.protobuf.Empty) returns (JobResponse);
  rpc FindById(FindByIdRequest) returns (JobModel);
  rpc HandleCreate(CreateJobRequest) returns (google.protobuf.Empty);
  rpc HandleUpdate(UpdateJobRequest) returns (google.protobuf.Empty);
  rpc HandleDelete(DeleteJobRequest) returns (google.protobuf.Empty);
  rpc HandleRequestCompleted(JobCompleteRequest) returns (google.protobuf.Empty);
}